--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     if (isYes) {
       fade("Hurray! 🎉 You make me so happy ❤️", yesMedia);
     } else {
-      fade("Oops 😅 even a screenshot is TAKEN but you’re not TAKEN", noMedia);
+      fade("Oops 😞 even the screenshot is TAKEN but you’re not TAKEN", noMedia);
     }
 
     buttonsDiv.innerHTML = `
